--- a/README
+++ b/README
@@ -13,6 +13,9 @@ File Names-
 
 Homework 2: Random Forests
 
+1.Random Forest -MNIST Dataset
+2.Random Forest-Cover Dataset
+
 
 Homework 3: K-Nearest Neighbour
 1.K-Nearest Neighbour-MNIST
